# llm-judge-calibration

./: .gitignore  LICENSE  PRD.md  README.md  parking_lot.md  pyproject.toml
data/: DATASHEET.md  labeled_sample.jsonl  pairwise_sample.jsonl
examples/: sample-report.html  sample-report.md
judgecal/: __init__.py  calibrate.py  cli.py  dataset.py  judge.py  metrics.py  probes.py  report.py
tests/: test_calibrate.py  test_metrics.py  test_probes.py
